feat: add forgot and change password API

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,8 @@ MAIL_PASS=
 
 # JWT Authentication
 JWT_SECRET_KEY=aksarasecret121002
-TOKEN_HEADER_KEY=aksaratokenheader
+# Default : Authorization
+TOKEN_HEADER_KEY=
 
 ## Base Directory for File Storage
 BASE_FILE_STORAGE=D:\Projects\Javascript\example-project
