feat: add forgot password API

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
-# Select Application Mode = development/dev or production/prod
+# session secret key
 APP_KEY=
+# select application mode = development/dev or production/prod
 MODE="dev"
 PORT=
+# default is http://localhost:3000/
+APP_URL=http://api.example.com/
+# default is http://localhost:3000/ (if APP_URL is empty)
+# or APP_URL, used for frontend domain or main domain
+# that used for forgot password form view.
+FRONTEND_URL=http://example.com/
 
-# Database 
+# database 
 DB_PORT=3306
 DB_HOST=localhost
 DB_USER=root
@@ -11,22 +18,22 @@ DB_PASS=
 DB_DIALECT=mysql
 DB_NAME=aksara
 
-# Redis
+# redis
 REDIS_HOST="127.0.0.1"
 REDIS_PORT=6379
 REDIS_PASS=
 
-# Socket Port
+# socket port
 SOCKET_PORT=
 
-# Mail Credentials (Gmail)
+# gmail credentials
 MAIL_USER=
 MAIL_PASS=
 
-# JWT Authentication
+# jwt
 JWT_SECRET_KEY=aksarasecret121002
-# Default : Authorization
+# header name for jwt token authentication, default is Authorization
 TOKEN_HEADER_KEY=
 
-## Base Directory for File Storage
+## base directory for file storage
 BASE_FILE_STORAGE=D:\Projects\Javascript\example-project
