--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint \"**/*.js\"",
     "lint:fix": "eslint --fix \"**/*.js\"",
     "lint:style": "npx stylelint \"**/*.css\"",
+    "test": "mocha --file \"./lib/test/setup.js\" \"./test/**/*.spec.js\" --reporter nyan",
     "prepare": "husky install"
   },
   "license": "MIT",
@@ -33,6 +34,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "bent": "^7.3.12",
+    "chai": "^4.3.4",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
@@ -41,6 +44,7 @@
     "express": "^4.17.1",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
+    "mocha": "^9.0.3",
     "nodemon": "^2.0.7",
     "prettier": "2.3.2",
     "redis": "^3.1.2",
