--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint \"**/*.js\"",
     "lint:fix": "eslint --fix \"**/*.js\"",
     "lint:style": "npx stylelint \"**/*.css\"",
-    "test": "mocha --file \"./lib/test/setup.js\" \"./test/**/*.spec.js\" --reporter nyan",
+    "test": "mocha --file \"./lib/test/setup.js\" \"./test/**/*.spec.js\" --reporter spec --exit",
     "prepare": "husky install"
   },
   "license": "MIT",
