--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint --fix \"**/*.js\"",
     "lint:style": "npx stylelint \"**/*.css\"",
     "test": "mocha --file \"./lib/test/setup.js\" \"./test/**/*.spec.js\" --reporter spec --timeout 30000 --exit",
+    "swagger:edit": "cross-env swagger_swagger_fileName=./documentation/swagger/swagger.yaml swagger project edit",
     "prepare": "husky install"
   },
   "license": "MIT",
@@ -52,7 +53,9 @@
     "sequelize-cli": "^6.2.0",
     "socket.io": "^4.0.1",
     "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0"
+    "stylelint-config-standard": "^22.0.0",
+    "swagger": "^0.7.5",
+    "swagger-editor": "^3.17.0"
   },
   "lint-staged": {
     "*.{js}": "eslint --cache --fix",
