--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.0",
     "socket.io-client": "^4.0.1",
-    "uuid": "^8.3.2"
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "bent": "^7.3.12",
