chore: new branding

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASS=
 DB_DIALECT=mysql
-DB_NAME=aksara
+DB_NAME=starter
 
 # redis
 REDIS_HOST="127.0.0.1"
@@ -31,7 +31,7 @@ MAIL_USER=
 MAIL_PASS=
 
 # jwt
-JWT_SECRET_KEY=aksarasecret121002
+JWT_SECRET_KEY=startersecret121002
 # header name for jwt token authentication, default is Authorization
 TOKEN_HEADER_KEY=
 
