--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "aksara",
+    "database": "node_express_starter",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "aksara_test",
+    "database": "node_express_starter_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "aksara",
+    "database": "node_express_starter",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
